--- a/app/views/partial/_navbar.html.erb
+++ b/app/views/partial/_navbar.html.erb
@@ -16,12 +16,12 @@
             <ul class="nav navbar-nav navbar-right">
                 <% if (!user_signed_in?) %>
                     <!-- ログインしていない時 -->
-                    <li><a href="#">スタジオを登録する</a></li>
+                    <li><%= link_to "FunSpotを登録する", new_myfunspot_path %></li>
                     <li><a href="#">利用の流れ</a></li>
                     <li><%= link_to "アカウント作成", new_user_registration_path%> </li>
                     <li><%= link_to "ログイン", new_user_session_path %> </li>
                 <% else %>
-                    <li><a href="#">スタジオを登録する</a></li>
+                    <li><%= link_to "FunSpotを登録する", new_myfunspot_path %></li>
                     <li><a href="#">利用の流れ</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
