--- a/app/views/myfunspots/new.html.erb
+++ b/app/views/myfunspots/new.html.erb
@@ -1,2 +1,47 @@
-<h1>Myfunspots#new</h1>
-<p>Find me in app/views/myfunspots/new.html.erb</p>
+<%= render 'partial/navbar' %>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3 text-center">
+      <h2>FunSpotの登録</h2>
+
+		<%= form_for @myfunspot do |f| %>
+
+        <div class="form-group">
+          <%= f.label :名前 %><br />
+          <%= f.text_field :name,:class => "form-control",:placeholder => "名前", autofocus: true %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :内容 %><br />
+          <%= f.text_area :content,:class => "form-control",:placeholder => "内容" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :住所 %><br />
+          <%= f.text_field :address,:class => "form-control",:placeholder => "住所" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :電話番号 %><br />
+          <%= f.text_field :phone_number,:class => "form-control",:placeholder => "電話番号" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :メールアドレス %><br />
+          <%= f.text_field :email,:class => "form-control",:placeholder => "メールアドレス", autocomplete: "email" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :ホームページアドレス %><br />
+          <%= f.text_field :email,:class => "form-control",:placeholder => "ホームページアドレス" %>
+        </div>
+
+
+        <div class="actions">
+          <%= f.submit "funspotを登録",class: "btn btn-primary" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
