--- a/app/views/myfunspots/index.html.erb
+++ b/app/views/myfunspots/index.html.erb
@@ -1,2 +1,28 @@
-<h1>Myfunspots#index</h1>
-<p>Find me in app/views/myfunspots/index.html.erb</p>
+<%= render 'partial/navbar' %>
+
+<div class="container"> 
+    <div class="col-md-10 col-md-offset-1">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <div class="text-center">
+                    <span style="font-size:18px;">FunSpot一覧</span>
+                </div>
+            </div>
+            <ul class="ul-unstyled">
+                <% @funspots.each do |funspot| %>
+                    <li class="panel-body">
+                        <div class="row-table">
+                            <div class="col-sm-7 col-lg-7 col-middle row-space-2">
+                                <span class="listing-title"><%= funspot.name %></span>
+                            </div>
+                            <div class="col-md-3 col-sm-3 col-middle row-space-1">
+                                 <%= link_to "編集する", edit_myfunspot_path(funspot), class: "btn btn-success pull-right" %>
+                            </div>
+                        </div>
+                    </li>
+                <% end %>               
+            </ul>     
+        </div>
+        
+    </div>
+</div>
