--- a/app/views/myfunspots/show.html.erb
+++ b/app/views/myfunspots/show.html.erb
@@ -1,2 +1,42 @@
-<h1>Myfunspots#show</h1>
-<p>Find me in app/views/myfunspots/show.html.erb</p>
+<%= render 'partial/navbar' %>
+
+<!-- サマリー -->
+<div class="container-fluid container-listing-show">
+    <div class="container">
+        <div class="listing-summary row-space-3 row-space-top-3">
+            <div class="row">
+                    <div class="listing-title" style="font-size:24px;">
+                        <%= @funspot.name %></p>
+                    </div>
+
+                <div class="col-md-6">
+                    <div class="row row-space-top-4">
+                        <p> 管理者： <%= @funspot.user.name %></p>
+                    </div>
+                    <div class="row">
+                        <p> 住所： <%= @funspot.address %></p>
+                    </div>
+                    <div class="row">
+                        <p> 電話番号： <%= @funspot.phone_number %></p>
+                    </div>
+                    <div class="row">
+                        <p> メールアドレス：<%= @funspot.email %></p>
+                    </div>
+                    <div class="row">
+                        <p> ホームページ：<%= @funspot.website %></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- メインコンテント -->
+<div class="container">
+    <div class="row">
+        <div class="col-md-8">
+            <h3 class="row-space-3">このFunSpotについて</h3>
+            <p><%= @funspot.content %></p>
+        </div>
+    </div>  
+</div>
