--- a/app/views/myfunspots/show.html.erb
+++ b/app/views/myfunspots/show.html.erb
@@ -32,7 +32,7 @@
                 <div id="map"></div>
             </div>  
 
-                <!-- 近くのリスティング    -->
+                <!-- 近くのFunspotを表示    -->
             <div class="row">
                 <div class="col-md-9">
                     <h3 class="row-space-3">近くのFunSpot</h3>
