--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,14 +3,14 @@
 @import "bootstrap";
 
 .jumbotron {
-padding-top: 0px;
-// 背景画像を暗くする
-background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1) ), url(child-3281615_1920.jpg);
-background-size:cover;
-// 背景画像の位置を決める
-background-position: 50% 50%;
-height: 420px;
-position: relative;
+    padding-top: 0px;
+    // 背景画像を暗くする
+    background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1) ), url(child-3281615_1920.jpg);
+    background-size:cover;
+    // 背景画像の位置を決める
+    background-position: 50% 50%;
+    height: 420px;
+    position: relative;
 }
 
 .jumbotron .container .row{
@@ -182,6 +182,28 @@ a.sidebar-item {
     .panel-list-img {
       height: 170px;
     }
+  }
+
+  //Top-search-fieldのcss
+  .top-search-field{
+      height: 90px;
+      background: #fff;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      padding: 30px 0;
+      background: rgba(0,0,0,0.6);
+  }
+
+  @media (min-width: 992px){
+      .top-search-field .col-md-7,.col-md-2,.col-md-1{
+          padding: 0;
+      }
+  }
+
+  .top-search-field input{
+      border-radius: 0;
   }
 
   
