--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -206,6 +206,32 @@ a.sidebar-item {
       border-radius: 0;
   }
 
+//topページコンテントのcss
+.portfolio-item a img{
+    width:100%;
+    height: 200px;
+}
+
+.portfolio-caption{
+    max-width: 400px;
+    margin: 0 auto;
+    background-color: white;
+    padding:15px
+}
+
+section h2.section-heading{
+    font-size: 40px;
+    margin-top: 0;
+    margin-bottom: 15px;
+}
+
+section h3.section-subheading {
+    font-size: 16px;
+    font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    text-transform: none;
+    font-style: italic;
+    font-weight: 400px    
+}
   
 body{
     color:#222;
