--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -41,4 +41,57 @@
     </div>
 </div>
 
+<div class="container">  
+  <!-- ご利用の流れ -->
+  <section id="services">
+    <div class="container">
+      <div class="row row-space-4">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading">ご利用の流れ</h2>
+          <h3 class="section-subheading">Funspotは空きがあるレンタルスタジオを簡単に探せるサービスです</h3>
+        </div>
+      </div>
+      <div class="row text-center">
+        <div class="col-md-4">
+          <%= image_tag 'search-icon'%>
+          <h4 class="service-heading">探す</h4>
+          <p class="text-muted hidden-xs">まず、空きがあるレンタルスタジオをこのサイトで検索しましょう。</p>
+        </div>
+        <div class="col-md-4">
+          <%= image_tag 'calendar-icon'%>
+          <h4 class="service-heading">予約する</h4>
+          <p class="text-muted hidden-xs">該当するレンタルスタジオがあったら予約しましょう。</p>
+        </div>
+        <div class="col-md-4">
+          <%= image_tag 'dance-icon'%>
+          <h4 class="service-heading">利用する</h4>
+          <p class="text-muted hidden-xs">予約した日の当日になったら、レンタルスタジオを各種リハーサルなどに利用しましょう！</p>
+        </div>
+      </div>
+    </div>
+  </section> 
+
+  <!-- おすすめのFunSpot -->
+  <section id="portfolio" class="bg-light-gray row-space-top-4 row-space-4">
+    <div class="container">
+        <div class="row ro-space-2">
+            <div class="col-lg-12 text-center">
+                <h3 class="section-heading">おすすめのFunspot紹介</h3>
+                <h4 class="section-subheading">認定済みのFunspotです</h4
+>           </div>
+        </div>
+
+        <div class="row">
+            <% @users.each do |user|%>
+                <% if !user.myfunspots.blank?%>
+                    <div class="portfolio-caption">
+                        <span style="font-weight: bold;"><%= user.name %>さん</span>
+                    </div>
+                <% end %>
+            <% end %>
+        </div>
+        </div>
+    </section>
+</div>
+
 
