--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -102,9 +102,12 @@
             </div>
             <div class="col-md-4">
                 <ul class="list-inline social-buttons">
-                    <li><a herf="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a herf="#"><i class="fa fa-facebook"></i></a></li>
-                    <li><a herf="mailto:dsaito85a@gmail.com?subject=FunSpotに関するお問い合わせ"><i class="fa fa-envelope"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a>
+                    </li>
+                    <li><a href="#"><i class="fa fa-facebook"></i></a>
+                    </li>
+                    <li><a href="mailto:自分のメールアドレス?subject=お問い合わせ"><i class="fa fa-envelope"></i></a>
+                    </li>
                 </ul>
             </div>
             <div class="col-md-4">
