--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -106,7 +106,7 @@
                     </li>
                     <li><a href="#"><i class="fa fa-facebook"></i></a>
                     </li>
-                    <li><a href="mailto:自分のメールアドレス?subject=お問い合わせ"><i class="fa fa-envelope"></i></a>
+                    <li><a href="mailto:dsaito85a@gmail.com?subject=Funspotに関するお問い合わせ"><i class="fa fa-envelope"></i></a>
                     </li>
                 </ul>
             </div>
