--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -22,6 +22,8 @@
         <%= form_tag search_path, method: :get do %>
             <div class="row">
                 <div class="container">
+                    <%= hidden_field_tag :lat %>
+                    <%= hidden_field_tag :lng %>
                     <div class="col-md-7 col-xs-10" style="padding-right: 0px">
                         <%= text_field_tag :serach, params[:search], placeholder: "希望の場所はどこですか？", class: "form-control",id:"top-search-form" %>
                     </div>
@@ -119,8 +121,8 @@ function init() {
         var lat = place.geometry.location.lat();
         var lng = place.geometry.location.lng();
 
-        window.alert(lat);
-        window.alert(lng);
+        document.getElementById('lat').value = lat;
+        document.getElementById('lng').value = lng;
 
         if (!place.geometry) {
         // User entered the name of a Place that was not suggested and
