--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -17,7 +17,7 @@
 
     function initMap() {
     var map = new google.maps.Map(document.getElementById('map'), {
-        center: {lat: -33.8688, lng: 151.2195},
+        center: {lat: <%= @latitude %>, lng: <%= @longitude %>},
         zoom: 13
     });
     var card = document.getElementById('pac-card');
