--- a/app/views/myfunspots/show.html.erb
+++ b/app/views/myfunspots/show.html.erb
@@ -27,6 +27,37 @@
                 <h3 class="row-space-3">このFunSpotについて</h3>
                 <p><%= @funspot.content %></p>
             </div>
+
+            <!-- 予約フォーム -->
+            <div class="row">
+                <div class="panel panel-default panel-show">                    
+                    <div class="panel-body panel-real">         
+                        <%= form_for [@funspot, @funspot.reservations.new] do |f| %>       
+                                        
+                            <!-- これは、予約をするときに、一緒におくる、データです。-->
+                            <%= f.hidden_field :funspot_id, value: @funspot.id %>
+
+                            <div class="row row-space-2">
+                                <div class="col-md-6">
+                                    <label>Check In</label>
+                                        <%= f.text_field :start, :class => 'form-control', placeholder: '開始' %>
+                                </div>
+
+                                <div class="col-md-6">
+                                    <label>Check Out</label>
+                                    <%= f.text_field :end, :class => 'form-control', placeholder: '終了' %>
+                                </div>
+                            </div>            
+
+                            <div class="actions text-center">
+                                <%= f.submit "この日程で予約する", class: "btn btn-danger btn-wide" %>
+                            </div>
+                        <% end %>
+                    </div>
+                </div>
+            </div>
+
+
             <div class="row">
                 <h3 class="row-space-3">アクセス</h3>
                 <div id="map"></div>
