--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,9 @@
 // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "pickadate/default";
+@import "pickadate/default.date";
+@import "pickadate/default.time";
 
 .jumbotron {
     padding-top: 0px;
