--- a/app/views/myfunspots/edit.html.erb
+++ b/app/views/myfunspots/edit.html.erb
@@ -4,6 +4,7 @@
   <div class="row">
     <div class="col-md-6 col-md-offset-3 text-center">
       <h2>FunSpotの更新</h2>
+    </div>
 
 		<%= form_for @myfunspot do |f| %>
 
@@ -37,11 +38,45 @@
           <%= f.text_field :website,:class => "form-control",:placeholder => "ホームページアドレス" %>
         </div>
 
-
         <div class="actions">
           <%= f.submit "funspotを更新",class: "btn btn-primary" %>
         </div>
       <% end %>
+
+  </div>
+</div>
+      <!-- 予約フォーム -->
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3 text-center">
+      <h2>定期予約の登録</h2>
     </div>
+    <%= form_for [@myfunspot, @myfunspot.regularreservations.new] do |f| %>       
+                    
+        <!-- これは、予約をするときに、一緒におくる、データです。-->
+        <%= f.hidden_field :funspot_id, value: @myfunspot.id %>
+
+        <div class="row row-space-2">
+            <div class="col-md-4">
+                <label>Check In</label>
+                    <%= f.text_field :start, :class => 'form-control', placeholder: '開始' %>
+            </div>
+
+            <div class="col-md-4">
+                <label>Check Out</label>
+                <%= f.text_field :end, :class => 'form-control', placeholder: '終了' %>
+            </div>
+
+            <div class="col-md-4">
+                <label>曜日</label>
+                <%= f.number_field :dow, :class => 'form-control', placeholder: '曜日' %>
+            </div>
+
+        </div>            
+
+        <div class="actions text-center">
+            <%= f.submit "この日程を定期予約に登録する", class: "btn btn-danger btn-wide" %>
+        </div>
+    <% end %>
   </div>
 </div>
