--- a/app/views/myfunspots/edit.html.erb
+++ b/app/views/myfunspots/edit.html.erb
@@ -45,7 +45,7 @@
 
   </div>
 </div>
-      <!-- 予約フォーム -->
+ <!-- 定期予約フォーム -->
 <div class="container">
   <div class="row">
     <div class="col-md-6 col-md-offset-3 text-center">
@@ -80,3 +80,28 @@
     <% end %>
   </div>
 </div>
+
+ <!-- 定期予約の一覧表示 -->
+<div class="container">
+    <div class="col-md-9">
+        <h3 class="row-space-3">定期予約の一覧表示</h3>            
+        <% for regular in @myfunspot.regularreservations %>
+          <div class="col-md-9">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <div class="row">
+                  <div class="col-md-8 col-xs-8">
+                    <%= regular.start %>
+                    <%= regular.end %>
+                    <%= regular.dow %>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        <% end %>
+    </div>
+</div>
+
+
+
