スタジオレンタルの予約フォームのタイトルを追加

--- a/app/views/myfunspots/show.html.erb
+++ b/app/views/myfunspots/show.html.erb
@@ -30,10 +30,10 @@
 
             <!-- 予約フォーム -->
             <div class="row">
+                <h3 class="row-space-3">スタジオレンタルの予約</h3>
                 <div class="panel panel-default panel-show">                    
                     <div class="panel-body panel-real">         
-                        <%= form_tag( myfunspot_reservations_path(@funspot.id), method: :post) do %>       
-
+                        <%= form_tag( myfunspot_reservations_path(@funspot.id), method: :post) do %>
                             <div class="row row-space-2">
                                 <div class="col-md-6">
                                     <p>Check In</p>
@@ -54,7 +54,6 @@
                     </div>
                 </div>
             </div>
-
 
             <div class="row">
                 <h3 class="row-space-3">アクセス</h3>
