--- a/app/views/myfunspots/show.html.erb
+++ b/app/views/myfunspots/show.html.erb
@@ -74,7 +74,22 @@
                         </div>
                     </div>
                 <% end %>
-            </div>
+            </div>  
+            <!-- 予約の一覧表示 -->
+            <h3 class="row-space-3">予約の一覧表示</h3>            
+            <!-- TODO:定期予約が一つ余計に表示される問題を暫定対処している -->
+            <% (@funspot.reservations).each{ | reservation |  %>
+                <div class="panel panel-default">
+                <div class="panel-body">
+                    <div class="row">
+                    <% if( !reservation.nil? && !reservation.start.nil? && !reservation.end.nil? ) then %>
+                        <%= "開始: " + reservation.start.strftime('%F') + " " + reservation.start.strftime('%R') %><br/>
+                        <%= "終了: " + reservation.end.strftime('%F') + " " + reservation.end.strftime('%R') %><br/>
+                    <% end %>        
+                    </div>
+                </div>
+                </div>
+            <% } %>
         </div>
     </div>
 </div>
