希望日時が予約済みの場合に検索から外すよう修正

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -18,6 +18,11 @@
     </div>
 
     <!-- Search Form -->
+    <!-- TODO: 開始、終了時間から予約が埋まっていないスタジオをリストアップできるようにする。 -->
+    <!-- TODO: 場所が入力されている場合は、それも考慮したい。 -->
+    <!-- TODO: 最寄り駅からの距離を検索条件に加えたい。https://mask.hatenadiary.com/entry/2014/06/16/193027 -->
+    <!-- http://www.kokudo.or.jp/database/004.html を見ると -->
+    <!-- TODO: レンタル時期がざっくりと、（昼間、夕方、深夜、など）選べるようにする -->
     <div class="top-search-field">
         <%= form_tag search_path, method: :get do %>
             <div class="row">
