--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -19,6 +19,8 @@
 
     <!-- Search Form -->
     <!-- TODO: 開始、終了時間から予約が埋まっていないスタジオをリストアップできるようにする。 -->
+    <!-- TODO: 時間を入れられるようにする。 -->
+    <!-- TODO: あとで深夜連、とかも選択できるようにする。 -->
     <!-- TODO: 場所が入力されている場合は、それも考慮したい。 -->
     <!-- TODO: 最寄り駅からの距離を検索条件に加えたい。https://mask.hatenadiary.com/entry/2014/06/16/193027 -->
     <!-- http://www.kokudo.or.jp/database/004.html を見ると -->
