--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -5,6 +5,8 @@
     </div>
 </div>
 
+<!-- TODO: 【優先度最高】検索結果をリストアップしたい -->
+
 <div class="col-md-6">
     <div id="map" style="height: 500px;">
     </div>
