--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,7 @@
 @import "pickadate/default.date";
 @import "pickadate/default.time";
 @import "fullcalendar";
+@import "daterangepicker";
 
 .jumbotron {
     padding-top: 0px;
