--- a/app/views/myfunspots/show.html.erb
+++ b/app/views/myfunspots/show.html.erb
@@ -76,7 +76,9 @@
                 <div id="map"></div>
             </div>  
 
-            <!-- 近くのFunspotを表示    -->
+<%
+=begin
+            <!-- 近くのFunspotを表示    --> TODO:heroku上のエラー解除のため仮でコメントアウト
             <div class="row">
                 <h3>近くのFunSpot</h3>                    
                 <% for funspotfor in @funspot.nearbys(10) %>
@@ -90,7 +92,9 @@
                         </div>
                     </div>
                 <% end %>
-            </div>  
+            </div>
+=end
+%>  
             <!-- 予約の一覧表示 -->
             <h3 class="row-space-3">予約の一覧表示</h3>            
             <!-- TODO:定期予約が一つ余計に表示される問題を暫定対処している -->
