heroku上のエラー解除のため仮でコメントアウト

--- a/app/views/myfunspots/show.html.erb
+++ b/app/views/myfunspots/show.html.erb
@@ -8,13 +8,22 @@
             <%= @funspot.name %></p>
         </div>
     </div>
+<%
+=begin
+
     <div class="row">
         <div class='calendar'></div>
     </div>
+=end
+%>
+
     <div class="row">
         <div id='remote_container'></div>
     </div>
 </div>
+
+<%
+=begin
 
 <!-- サマリー -->
 <div class="container-fluid container-listing-show">
@@ -75,6 +84,8 @@
                 <h3 class="row-space-3">アクセス</h3>
                 <div id="map"></div>
             </div>  
+=end
+%>
 
 <%
 =begin
