top page simply

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,7 +10,7 @@
 .jumbotron {
     padding-top: 0px;
     // 背景画像を暗くする
-    background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1) ), url(child-3281615_1920.jpg);
+    background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1) ), url(backlit-bonding-casual-708392.jpg);
     background-size:cover;
     // 背景画像の位置を決める
     background-position: 50% 50%;
