--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -16,16 +16,10 @@
 
         <div class="row">
             <div class="col-md-6 col-md-offset-3 text-center">
-                <button type="button" class="btn btn-primary">Primary</button>
+                <button type="button" class="btn btn-primary">ダンスレッスンを探す</button>
+                <button type="button" class="btn btn-primary">ダンスレッスンを登録する</button>
             </div>
         </div>
-
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3 text-center">
-                <button type="button" class="btn btn-primary">Primary</button>
-            </div>
-        </div>
-
     </div>
 </div>
 
