--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3 text-center">
                 <button type="button" class="btn btn-primary">ダンスレッスンを探す</button>
-                <button type="button" class="btn btn-primary">ダンスレッスンを登録する</button>
+                <%= link_to "ダンスレッスンを登録する", new_lesson_path, class: 'btn btn-primary' %>
             </div>
         </div>
     </div>
