--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -16,8 +16,8 @@
 
         <div class="row">
             <div class="col-md-6 col-md-offset-3 text-center">
-                <button type="button" class="btn btn-primary">ダンスレッスンを探す</button>
-                <%= link_to "ダンスレッスンを登録する", new_lesson_path, class: 'btn btn-primary' %>
+                <%= link_to "ダンスレッスンを探す", lessons_path, class: 'btn btn-primary' %>
+                <%= link_to "ダンスレッスンを開催する", new_lesson_path, class: 'btn btn-primary' %>
             </div>
         </div>
     </div>
