--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -2,15 +2,25 @@
 
 <div class="row">
     <% @lessons.each do |lesson| %>
-        <li class="panel-body">
-            <div class="row-table">
-                <div class="col-sm-7 col-lg-7 col-middle row-space-2">
-                    <span class="listing-title"><%= lesson.title %></span>
-                </div>
-                <div class="col-md-3 col-sm-3 col-middle row-space-1">
-                        <%= link_to "詳細を表示する", lesson_path(lesson), class: "btn btn-primary pull-right" %>
+        <div class="container">
+            <div class="panel panel-primary">
+                <div class="panel-heading"><%= lesson.title %></div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-sm-3"></div>
+                        <div class="col-sm-3"><%= image_tag 'search-icon' %></div>
+                        <div class="col-sm-3"><a class="circle" href="~">
+                            <span>募集中<br>0/5</span>
+                        </a>
+                        </br></div>
+                        <div class="col-sm-3"></div>
+                    </div>
+                    <p><button type="button" class="btn btn-primary center-block">参加します！</button></p>
+                    <p><button type="button" class="btn btn-primary center-block">質問があります！</button></p>
+                    <div class="col-md-10 col-md-offset-1"> <%= lesson.summary %> </div>
+                    <button type="button" class="btn btn-primary center-block">詳細を知りたいです！</button>
                 </div>
             </div>
-        </li>
-    <% end %>               
+        </div>
+    <% end %>
 </div>
