--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,15 +12,27 @@
     // 背景画像を暗くする
     background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1) ), url(backlit-bonding-casual-708392.jpg);
     background-size:cover;
+    height: 100vh;
+    min-height: 300px;
     // 背景画像の位置を決める
     background-position: 50% 50%;
-    height: 420px;
     position: relative;
 }
 
 .jumbotron .container .row{
     margin-top: 100px;
     color: #fff;
+}
+
+.jumbotron .btn{
+    font-size: 2.5em;
+    border-radius: 1em;
+}
+
+.logo {
+    color: #fff;
+    font-size: 5em;
+    line-height: 1.6;
 }
 
 .navbar-default {
