ajust top page layout for mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,14 +19,14 @@
     position: relative;
 }
 
-.jumbotron .container .row{
-    margin-top: 100px;
+.jumbotron .container-fulid .row{
+    margin-top: 40%;
     color: #fff;
 }
 
 .jumbotron .btn{
-    font-size: 2.5em;
-    border-radius: 1em;
+    font-size: 2.0em;
+    border-radius: 0.5em;
 }
 
 .logo {
