--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -7,17 +7,17 @@
 
 <div class="jumbotron">
    <%= render 'partial/navbar' %>
-    <div class="container">
+    <div class="container-fulid">
         <div class="row">
-            <div class="col-md-6 col-md-offset-3 text-center">
+            <div class="text-center">
                 <h1 class="display-4">ダンス未経験者大歓迎！<BR/>ダンスでストレス発散しよう！</h1>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-md-6 col-md-offset-3 text-center">
-                <p><%= link_to "ダンスレッスンを探す", lessons_path, class: 'btn btn-primary display-4' %></p>
-                <p><%= link_to "ダンスレッスンを開催する", new_lesson_path, class: 'btn btn-primary display-4' %></p>
+            <div class="text-center">
+                <p><%= link_to "ダンスレッスンを探す", lessons_path, class: 'btn btn-primary' %></p>
+                <p><%= link_to "ダンスレッスンを開催する", new_lesson_path, class: 'btn btn-primary' %></p>
             </div>
         </div>
     </div>
