--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,9 +4,10 @@
         $(".navbar").addClass("navbar-default");
     });
 </script>
-
+<%= render 'partial/navbar' %>
 <div class="jumbotron">
-   <%= render 'partial/navbar' %>
+    <div class="container-fluid">
+    </div>
     <div class="container-fulid">
         <div class="row">
             <div class="text-center">
