--- a/app/views/partial/_navbar.html.erb
+++ b/app/views/partial/_navbar.html.erb
@@ -1,41 +1,6 @@
-<div class="row">
-    <nav class="navbar navbar-devise">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand logo" href="/">FunSpot</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <% if (!user_signed_in?) %>
-                        <!-- ログインしていない時 -->
-                        <li><%= link_to "FunSpotを登録する", new_myfunspot_path %></li>
-                        <li><a href="#">利用の流れ</a></li>
-                        <li><%= link_to "アカウント作成", new_user_registration_path%> </li>
-                        <li><%= link_to "ログイン", new_user_session_path %> </li>
-                    <% else %>
-                        <li><%= link_to "FunSpotを登録する", new_myfunspot_path %></li>
-                        <li><a href="#">利用の流れ</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><%= link_to "プロフィール", user_path(current_user) %></li>
-                                <li><%= link_to "プロフィール編集", edit_user_registration_path %></li>
-                                <li><%= link_to "FunSpot管理", myfunspots_path %></li>
-                                <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
-                            </ul>
-                        </li>
-                    <% end %>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div>
-    </nav>
+<div class="container-fluid">
+    <div class="row mynabvar">
+        <section class="col-xs-8"><a class="logo" href="/">FunSpot</a></section>
+        <section class="col-xs-4 text-center align-middle"><%= link_to "ログイン", lessons_path, class: 'btn btn-primary logo' %></section>
+    </div>
 </div>
